--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,9 +1,11 @@
 #app-container {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     display: grid;
     grid-template-rows: 8vh 92vh;
-    grid-template-columns: 300px minmax(41vw, 1fr) 41vw;
+    /* grid-template-columns: 300px minmax(41vw, 1fr) 41vw; */
+    grid-template-columns: 300px auto 41vw;
     grid-template-areas:
         "toolbar toolbar toolbar"
         "styler sandbox editor"
@@ -20,7 +22,7 @@
     grid-area: styler;
     /* overflow-x: hidden; */
     overflow-y: scroll;
-    padding-bottom: 180px;
+    padding-bottom: 300px;
 }
 
 #sandbox {
