UI Improvement: selected styles get different styling

--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -1,12 +1,12 @@
 <div id="slide-editor-toolbar" class="grayAccent02 flex-row-evenly">
   <a (click)="this.createNewSlide()" class="flex-row-evenly slide-editor-toolbar-btn-group">
     <fa name="plus-square"></fa>
-    <!-- <p>Create a new slide</p> -->
+    <p>New slide</p>
   </a>
 
   <a (click)="this.preview()" class="flex-row-evenly slide-editor-toolbar-btn-group">
     <fa name="play"></fa>
-    <!-- <p>Preview</p> -->
+    <p>Preview</p>
   </a>
 
   <a (click)="this.previousSlide()" class="flex-row-evenly slide-editor-toolbar-btn-group">
@@ -23,7 +23,7 @@
 
   <a (click)="this.deleteCurrentSlide()" class="flex-row-evenly slide-editor-toolbar-btn-group">
     <fa name="trash"></fa>
-    <!-- <p>Delete slide</p> -->
+    <p>Delete slide</p>
   </a>
 </div>
 
