--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -20,18 +20,18 @@
 
   <!-- Text styles -->
   <div *ngIf="this.data.viewTextElements">
-    <a *ngFor="let textStyle of this.data.textStyles" (click)="this.data.selectStyle('text', textStyle.id); this.data.setMode('text')" class=" greenAccent01 toolbar-style-btn">{{textStyle.name}}</a>
+    <a *ngFor="let textStyle of this.data.textStyles" (click)="this.data.selectStyle('text', textStyle.id); this.data.setMode('text')" class="greenAccent01 toolbar-style-btn" [class.selected]="isSelected(textStyle)">{{textStyle.name}}</a>
   </div>
 
   <!-- Image styles -->
   <div *ngIf="this.data.viewImageElements">
-    <a *ngFor="let imageStyle of this.data.imageStyles" (click)="this.data.selectStyle('image', imageStyle.id); this.data.setMode('image')" class=" greenAccent01 toolbar-style-btn">{{imageStyle.name}}</a>
+    <a *ngFor="let imageStyle of this.data.imageStyles" (click)="this.data.selectStyle('image', imageStyle.id); this.data.setMode('image')" class="greenAccent01 toolbar-style-btn" [class.selected]="isSelected(imageStyle)">{{imageStyle.name}}</a>
   </div>
 
   <!-- Shape styles -->
-  <div *ngIf="this.data.viewShapeElements">
-    <a *ngFor="let shapeStyle of this.data.shapeStyles" (click)="this.data.selectStyle('shape', shapeStyle.id); this.data.setMode('shape')" class=" greenAccent01 toolbar-style-btn">{{shapeStyle.name}}</a>
-  </div>
+  <!-- <div *ngIf="this.data.viewShapeElements">
+    <a *ngFor="let shapeStyle of this.data.shapeStyles" (click)="this.data.selectStyle('shape', shapeStyle.id); this.data.setMode('shape')" class="greenAccent01 toolbar-style-btn" [class.selected]="isSelected(shapeStyle)">{{shapeStyle.name}}</a>
+  </div> -->
 </div>
 
 
