--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -3,6 +3,8 @@ body, html{
     padding: 0;
     font-family: 'Helvetica', sans-serif;
     overflow: visible;
+    user-select: none;
+    outline: 0;
 }
 
 h1, h2, h3, h4, h5, h6, p {
