--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -60,6 +60,10 @@
         <p>
           <input type="number" [(ngModel)]="this.data.slideRenderMagnification">%</p>
       </div>
+
+      <div class="flex-row-evenly">
+        <p>{{this.data.documentSize.width}}px X {{this.data.documentSize.height}}px</p>
+      </div>
     </div>
 
     <div id="heirarchy">
