--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -52,7 +52,7 @@
 }
 
 .slide-object {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     overflow: hidden;
     user-select: none;
     z-index: -1;
@@ -66,7 +66,9 @@
 .slide-object:hover{
     cursor: move;
     background: rgba(0, 0, 0, 0.3);
-    border: 2px dashed silver;
+    border: 2px dashed gray;
+    margin-top: -2px;
+    margin-left: -2px;
 }
 
 #slide-control {
@@ -74,11 +76,12 @@
     width: 100%;
     overflow: auto;
     display: grid;
-    grid-template-rows: 3vh 40vh;
+    grid-template-rows: 4vh 39vh;
 }
 
 #slide-control-toolbar {
     width: 100%;
+    background: rgb(46, 46, 46);
 }
 
 #slide-control-toolbar fa,
