--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -84,7 +84,12 @@
     background: rgb(46, 46, 46);
 }
 
-#slide-control-toolbar fa,
+#slide-control-toolbar fa {
+    width: 15px;
+    height: 15px;
+    margin: 0 5px;
+}
+
 #slide-control-toolbar p {
     font-size: 0.7rem;
     margin: 0 5px;
