--- a/client/src/app/image-style-card/image-style-card.component.css
+++ b/client/src/app/image-style-card/image-style-card.component.css
@@ -14,22 +14,32 @@
 
 .style-card-row h3 {
     font-size: 1rem;
+    font-weight: normal;
 }
 
 .style-card-row a,
 .style-card-row h4 {
     font-size: 0.8rem;
+    font-weight: normal;
 }
 
 .style-card-row 
 .material-icons {
     font-size: 1.2rem;
-    padding: 7px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .style-card-row fa {
     font-size: 0.8rem;
-    padding: 7px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .style-card-row fa:hover,
@@ -50,14 +60,30 @@ input[type="number"]{
     text-align: center;
 }
 
+input[type="text"]{
+    margin: 0 3px;
+    padding: 2px;
+    box-sizing: border-box;
+    background: transparent;
+    color: #D6F9DD;
+    border: 1px #D6F9DD solid;
+}
+
 input[type="range"]{
     width: 85px;
 }
 
-.google-font-name {
-    font-size: 0.7rem;
+.style-card-row
+select {
     border: 1px #D6F9DD solid;
-    padding: 2px 4px;
-    cursor: pointer;
-    line-height: 1;
+    box-sizing: border-box;
+    background: #D6F9DD;
+    color: black;
+    border: 1px #D6F9DD solid;
+}
+
+.selected {
+    background:rgb(137, 150, 132);
+    border: 1px white solid;
+    box-sizing: border-box;
 }
