--- a/client/src/app/text-style-card/text-style-card.component.css
+++ b/client/src/app/text-style-card/text-style-card.component.css
@@ -8,28 +8,38 @@
 
 .style-card-row {
     width: 100%;
-    height: 25px;
+    min-height: 25px; 
     margin: 3px auto;
 }
 
 .style-card-row h3 {
     font-size: 1rem;
+    font-weight: normal;
 }
 
 .style-card-row a,
 .style-card-row h4 {
     font-size: 0.8rem;
+    font-weight: normal;
 }
 
 .style-card-row 
 .material-icons {
     font-size: 1.2rem;
-    padding: 7px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .style-card-row fa {
     font-size: 0.8rem;
-    padding: 7px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .style-card-row fa:hover,
@@ -48,6 +58,34 @@ input[type="number"]{
     color: #D6F9DD;
     border: 1px #D6F9DD solid;
     text-align: center;
+}
+
+input[type="text"]{
+    margin: 0 3px;
+    padding: 2px;
+    box-sizing: border-box;
+    background: transparent;
+    color: #D6F9DD;
+    border: 1px #D6F9DD solid;
+}
+
+.style-card-row
+select {
+    border: 1px #D6F9DD solid;
+    box-sizing: border-box;
+    background: #D6F9DD;
+    color: black;
+    border: 1px #D6F9DD solid;
+}
+
+.selected {
+    background:rgb(137, 150, 132);
+    border: 1px white solid;
+    box-sizing: border-box;
+}
+
+.icon-group {
+    width: 100px;
 }
 
 .google-font-name {
